chore(processor): widen shadow marker to expose the shadowing @TestComponent